query-compiler/query-compiler/tests/snapshots/queries__queries@query-compound-id.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-compound-id.json
snapshot_kind: text
---
dataMap {
    a: Int (a)
    b: Int (b)
}
unique (query «SELECT "public"."ParentModelWithCompositeId"."a",
               "public"."ParentModelWithCompositeId"."b" FROM
               "public"."ParentModelWithCompositeId" WHERE
               ("public"."ParentModelWithCompositeId"."a" = $1 AND
               "public"."ParentModelWithCompositeId"."b" = $2) LIMIT $3 OFFSET
               $4»
        params [const(BigInt(1)), const(BigInt(1)), const(BigInt(1)),
                const(BigInt(0))])
