query-compiler/query-compiler/tests/snapshots/queries__queries@query-m2o-lateral.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 74
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-m2o-lateral.json
snapshot_kind: text
---
dataMap
   issued: Date [issued]
   secret: String [secret]
   done: Boolean [done]
   user: 
      id: Int [id]
      email: String [email]
query «SELECT "t0"."id", "t0"."issued", "t0"."secret", "t0"."done",
       "t0"."userId", "Activation_user"."__prisma_data__" AS "user" FROM
       "public"."Activation" AS "t0" LEFT JOIN LATERAL (SELECT
       JSONB_BUILD_OBJECT('id', "t1"."id", 'email', "t1"."email") AS
       "__prisma_data__" FROM "public"."User" AS "t1" WHERE "t0"."userId" =
       "t1"."id" LIMIT $1) AS "Activation_user" ON true»
params [const(BigInt(1))]
