query-compiler/query-compiler/tests/snapshots/queries__queries@query-o2m-lateral.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-o2m-lateral.json
---
dataMap {
    id: Int (id)
    email: String (email)
    activations (from activations): {
        issued: DateTime (issued)
        secret: String (secret)
        done: Boolean (done)
    }
}
query «SELECT "t0"."id", "t0"."email", "User_activations"."__prisma_data__" AS
       "activations" FROM "public"."User" AS "t0" LEFT JOIN LATERAL (SELECT
       COALESCE(JSONB_AGG("__prisma_data__"), '[]') AS "__prisma_data__" FROM
       (SELECT "t3"."__prisma_data__" FROM (SELECT JSONB_BUILD_OBJECT('issued',
       "t2"."issued", 'secret', "t2"."secret", 'done', "t2"."done") AS
       "__prisma_data__", "t2"."userId" FROM (SELECT "t1".* FROM
       "public"."Activation" AS "t1" WHERE "t0"."id" = "t1"."userId" /* root
       select */) AS "t2" /* inner select */) AS "t3" /* middle select */) AS
       "t4" /* outer select */) AS "User_activations" ON true»
params []
