query-compiler/query-compiler/tests/snapshots/queries__queries@query-o2m.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 76
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-o2m.json
snapshot_kind: text
---
rawNestedRead (query «SELECT "public"."User"."id", "public"."User"."email" FROM
                      "public"."User" WHERE 1=1 OFFSET $1»
               params [const(BigInt(0))]
               fields {
                   id: id
                   email: email
               }
               relations [activations on left.id = right.userId many (query
                                                                      «SELECT
                                                                       "public"."Activation"."id",
                                                                       "public"."Activation"."issued",
                                                                       "public"."Activation"."secret",
                                                                       "public"."Activation"."done",
                                                                       "public"."Activation"."userId"
                                                                       FROM
                                                                       "public"."Activation"
                                                                       WHERE
                                                                       "public"."Activation"."userId"
                                                                       IN [$1,*]
                                                                       OFFSET
                                                                       $2»
                                                                      params [var(@parent$id as Int),
                                                                              const(BigInt(0))]
                                                                      fields {
                                                                          issued: issued
                                                                          secret: secret
                                                                          done: done
                                                                      })])
