query-compiler/query-compiler/tests/snapshots/queries__queries@query-unique-one2m-pagination.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 76
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-unique-one2m-pagination.json
snapshot_kind: text
---
rawNestedReadUnique (query «SELECT "public"."User"."id",
                            "public"."User"."email",
                            "public"."User"."role"::text FROM "public"."User"
                            WHERE "public"."User"."id" = $1 LIMIT $2 OFFSET $3»
                     params [const(BigInt(1)), const(BigInt(1)),
                             const(BigInt(0))]
                     fields {
                         id: id
                         email: email
                         role: role
                     }
                     relations [posts on left.id = right.userId many (query
                                                                      «SELECT
                                                                       "public"."Post"."id",
                                                                       "public"."Post"."userId"
                                                                       FROM
                                                                       "public"."Post"
                                                                       WHERE
                                                                       "public"."Post"."userId"
                                                                       = $1
                                                                       ORDER BY
                                                                       "public"."Post"."id"
                                                                       ASC LIMIT
                                                                       $2 OFFSET
                                                                       $3»
                                                                      params [var(@parent$id as Int),
                                                                              const(BigInt(10)),
                                                                              const(BigInt(10))]
                                                                      fields {
                                                                          id: id
                                                                      })])
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
