query-compiler/query-compiler/tests/snapshots/queries__queries@update-connect-parent-one2m.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/update-connect-parent-one2m.json
---
transaction
   dataMap {
       id: Int (id)
       managerId: Int? (managerId)
   }
   let 1 = unique (query «SELECT "public"."Employee"."id" FROM
                          "public"."Employee" WHERE "public"."Employee"."id" =
                          $1 LIMIT $2 OFFSET $3»
                   params [const(BigInt(2)), const(BigInt(1)),
                           const(BigInt(0))])
   in let 1 = unique (validate (get 1)
          [ rowCountNeq 0
          ] orRaise "MISSING_RELATED_RECORD");
          1$id = mapField id (get 1)
      in let 0 = unique (query «UPDATE "public"."Employee" SET "managerId" = $1
                                WHERE "public"."Employee"."id" = $2 RETURNING
                                "public"."Employee"."id",
                                "public"."Employee"."managerId"»
                         params [var(1$id as Int), const(BigInt(1))])
         in let 0 = unique (validate (get 0)
                [ rowCountNeq 0
                ] orRaise "MISSING_RECORD");
                0$id = mapField id (get 0)
            in unique (query «SELECT "public"."Employee"."id",
                              "public"."Employee"."managerId" FROM
                              "public"."Employee" WHERE "public"."Employee"."id"
                              = $1 LIMIT $2 OFFSET $3»
                       params [var(0$id as Int), const(BigInt(1)),
                               const(BigInt(0))])
